objects/Form_Attribute__c.object
<CustomObject>
    <fields>
        <fullName>API_Name__c</fullName>
        <label>API Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Work Request Form</fullName>
                </value>
                <value>
                    <fullName>Candidate Import Template</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Data_Type__c</fullName>
        <label>Data Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>text</fullName>
                </value>
                <value>
                    <fullName>number</fullName>
                </value>
                <value>
                    <fullName>date</fullName>
                </value>
                <value>
                    <fullName>time</fullName>
                </value>
                <value>
                    <fullName>datetime</fullName>
                </value>
                <value>
                    <fullName>checkbox</fullName>
                </value>
                <value>
                    <fullName>checkboxgroup</fullName>
                </value>
                <value>
                    <fullName>DropDown</fullName>
                </value>
                <value>
                    <fullName>email</fullName>
                </value>
                <value>
                    <fullName>radiogroup</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Field_Status__c</fullName>
        <defaultValue>&apos;Requested&apos;</defaultValue>
        <label>Field Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Created</fullName>
                </value>
                <value>
                    <fullName>Requested</fullName>
                </value>
                <value>
                    <fullName>Deleted</fullName>
                </value>
                <value>
                    <fullName>Hidden</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object__c</fullName>
        <label>Object</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Bureau_Candidate__c</fullName>
                </value>
                <value>
                    <fullName>Work_Request__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reportable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reportable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Values__c</fullName>
        <label>Values</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <label>Form Attribute</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Label__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Attribute Index Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Attributes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>